✨ collections
semver: minor
